# femto2

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .~lock.extra_preamble_info.xlsx#  LICENSE  README.md  coupler.py  env.yml  example.py  monkeytype.sqlite3  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: codecov.yml  tests.yml
docs/: conf.py  index.rst  requirements.txt
docs/guide/: about.rst  install.rst
docs/modules/: device.rst  laserpath.rst  marker.rst  pgmcompiler.rst  rasterimage.rst  trench.rst  waveguide.rst  writer.rst
example/: example.py  param.py
example/20X20/: circ20x20.py
examples/: base_example.py  mzi_plain.py  mzi_trench.py
examples/20X20/: circ20x20.py  param.py
examples/20x20/: circ20x20.py  param.py
examples/MZI/: mzi.py  param.py
examples/MZIs+trench/: mzi.py
examples/MistoMare/: MistoMare_test.py  param.py
examples/MxN UPP/: circMxN.py  param.py
examples/mzi/: mzi.py  param.py
examples/opt_acc/: opt_acc.py  paramFile.py
femto/: Cell.py  GCODE_plot_colored.py  LaserPath.py  Marker.py  PGMCompiler.py  Parameters.py  RasterImage.py  Trench.py  Waveguide.py  __init__.py  helper.py  helpers.py
femto/compiler/: PGMCompiler.py  __init__.py  header_capable.txt  header_fire.txt
femto/objects/: Ablation.py  Marker.py  Trench.py  Waveguide.py  __init__.py
femto/utils/: GCODE_plot_colored.py  header_capable.txt  header_fire.txt
flww/compiler/: PGMCompiler.py
flww/objects/: Waveguide.py
src/femto/: Cell.py  LaserPath.py  Marker.py  PGMCompiler.py  Parameters.py  RasterImage.py  Trench.py  Waveguide.py  __init__.py  app.py  circuits.py  curves.py  device.py  helpers.py  laserpath.py  logger.py  marker.py  pgmcompiler.py  rasterimage.py  spreadsheet.py  spreadsheets.py  text.py  trench.py  waveguide.py  writer.py
src/femto/utils/: GCODE_plot_colored.py  WARP.txt  _fonts.py  header.txt  header_ant.txt  header_carbide.txt  header_pharos.txt  header_uwe.txt  saints_data.txt  spreadsheet_columns.txt
tests/: curves_test.py  device_test.py  helpers_test.py  laser_path_test.py  marker_test.py  pgm_compiler_test.py  raster_image_test.py  spreadsheet_test.py  test_laser_path.py  test_marker.py  test_pgm_compiler.py  test_trench.py  test_waveguide.py  trench_test.py  waveguide_test.py  writer_test.py
