[metadata]
name = femto
description = Python suite for the design of femtosecond laser-written circuit.
author = Riccardo Albiero
license = MIT
license_files = LICENSE
pltaform = unix, linux, cygwin, win32

[options]
packages =
    femto
install_requires =
    descartes>=1.1.0
    matplotlib>=3.3.4
    pandas>=1.1.5
    Pillow>=9.3.0
    plotly>=5.11.0
    scipy>=1.5.4
    setuptools>=58.0.4
    Shapely>=1.8.5.post1
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    black>=22.10.0

[options.package_data]
femto = py.typed

[flake8]
max-line-length = 120
ignore = E203, W503

[pep8]
max-line-length = 88
ignore = E101,E114,E115,E116,E121,E128,E251,E265,E266,E3,E711,E712,E713,E714,W191
