[metadata]
name = femto
version = 1.1.2
description = Python suite for femtosecond laser-written circuit design.
long_description = file: README.md
long_description_content_type = text/markdown
author = Riccardo Albiero
author_email = albr.riccardo@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
pltaform = unix, linux, cygwin, win32

[options]
packages =
    femto
install_requires =
    Pillow>=9.3.0
    Shapely>=1.7.1
    dill>=0.3.4
    kaleido>=0.2.1
    largestinteriorrectangle>=0.2.0
    matplotlib>=3.3.4
    nptyping>=2.4.1
    opencv-python>=4.8.0
    openpyxl>=3.1.2
    pandas>=1.1.5
    plotly>=5.10.0,<5.11.0
    pyyaml>=6.0
    scipy>=1.5.4
    setuptools>=58.0.4
    toml>=0.10.2
    tomli>=2.0.1
    xlsxwriter>=3.0.3
python_requires = >=3.7
include_package_data = true
package_dir =
    =src
zip_safe = true

[options.extras_require]
testing =
    black==22.10.0
    flake8>=3.9
    mypy>=0.910
    pre-commit>=2.1.0
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24

[options.package_data]
femto = py.typed, utils/*

[flake8]
max-line-length = 120
ignore = E203, W503

[pep8]
max-line-length = 88
ignore = E101,E114,E115,E116,E121,E128,E251,E265,E266,E3,E711,E712,E713,E714,W191
